@@ -23,6 +23,8 @@
    - markus@cvs.openbsd.org 2003/06/17 18:14:23
      [cipher-ctr.c]
      use license from /usr/share/misc/license.template for new code
+ - (dtucker) [reconfigure.sh rekey.sh sftp-badcmds.sh]
+   Import new regression tests from OpenBSD
 
 20030614
  - (djm) Update license on fake-rfc2553.[ch]; ok itojun@
@@ -538,4 +540,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.2808 2003/06/18 10:29:35 djm Exp $
+$Id: ChangeLog,v 1.2809 2003/06/18 12:18:57 dtucker Exp $
